# autogit

./: .gitignore  README.md  pyproject.toml  todo.md
gitify/: __init__.py  config.py  llm.py  main.py  utils.py
