[project]
name = "gitify"
version = "0.1.0"
description = "Automatically generate Github commit messages and readme files using LLMs."
authors = [{ name = "Josh Pearlson", email = "jcpearlson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "openai>=0.8.0",
    "tiktoken>=0.9.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
gitify = "gitify.main:main"
